# value-preserving-literals

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  Makefile  README.md  README.md.license
.github/: dependabot.yml
.github/workflows/: API-docs.yml  GCC.yml  doxygen.yml  fair-software.yml
include/gsi/: val.h
include/vir/: val.h
main/: annotated.html  annotated_dup.js  classes.html  classvir_1_1bad__value__preserving__cast-members.html  classvir_1_1bad__value__preserving__cast.html  classvir_1_1bad__value__preserving__cast.js  dir_091be1a3e4344cd0ed21a0885074645e.html  dir_091be1a3e4344cd0ed21a0885074645e.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  index.html  md_README.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  namespacevir.html  namespacevir.js  navtreedata.js  navtreeindex0.js  pages.html  structvir_1_1constinteger-members.html  structvir_1_1constinteger.html  structvir_1_1constinteger.js  structvir_1_1constreal-members.html  structvir_1_1constreal.html  structvir_1_1constreal.js  val_8h.html  val_8h.js  val_8h_source.html
main/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_8.js  classes_0.js  defines_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  pages_4.js  related_0.js  searchdata.js
tests/: arithmetic.cpp
